syntax = "proto3";
package sentinel.node.v3;

import "gogoproto/gogo.proto";
import "sentinel/node/v3/params.proto";

option go_package = "github.com/sentinel-official/hub/v12/x/node/types/v3";
option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;

message MsgStartSessionRequest {
  string from = 1;
  string node_address = 2;
  int64 gigabytes = 3;
  int64 hours = 4;
  string denom = 5;
}

message MsgUpdateParamsRequest {
  string from = 1;
  Params params = 2 [(gogoproto.nullable) = false];
}

message MsgStartSessionResponse {}
message MsgUpdateParamsResponse {}

service MsgService {
  rpc MsgStartSession(MsgStartSessionRequest) returns (MsgStartSessionResponse);
  rpc MsgUpdateParams(MsgUpdateParamsRequest) returns (MsgUpdateParamsResponse);
}
